.thumbnail table: need an invisible border to avoid flickering on hover
git-svn-id: file:///home/igor/dev/stuff/svnbackup/trunk@2399 ef7698a4-5110-0410-9fc6-c7eb3693863f

--- a/pickwick/src/main/resources/org/wicketstuff/pickwick/frontend/pages/css/thumbnail.css
+++ b/pickwick/src/main/resources/org/wicketstuff/pickwick/frontend/pages/css/thumbnail.css
@@ -14,18 +14,23 @@
 
 .thumbnail table .label{
 	color: white;
-	text-decoration:Ê none;
+	text-decoration: none;
 	height: 15px;
 	overflow:hidden;
 	width:100%;
 }
 
-.thumbnail:hover table .label{
+.thumbnail:hover table .label {
 	background-color: #46c308;
 }
 	
-.thumbnail:hover table{
+.thumbnail:hover table {
 	border: 1px dotted #46c308;
+}
+
+.thumbnail table {
+	/* need an invisible border to avoid flickering on hover */
+	border: 1px dotted black;
 }
 
 .thumbnail img {
